--- a/components/blocks/App.css
+++ b/components/blocks/App.css
@@ -6,3 +6,28 @@
   font-weight: normal;
   font-size: 16px;
 }
+
+h1 {
+  font-family: 'open-sans', Arial, sans-serif;
+  font-weight: medium;
+  font-size: 64px;
+  margin: 0;
+  padding: 0;
+}
+
+h2 {
+  font-family: 'open-sans', Arial, sans-serif;
+  font-weight: normal;
+  font-size: 58px;
+  margin: 0;
+  padding: 0;
+}
+
+ .center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
